name: shikensu
version: 0.1.0
category: File IO

synopsis:
  A small functional toolset for building static websites

description:
  Please see README.md

homepage:
  https://github.com/icidasset/shikensu#README

license: MIT
license-file: LICENSE

author: Steven Vandevelde
maintainer: icid.asset@gmail.com

build-type: Simple
cabal-version: >= 1.10


source-repository head
  type: git
  location: https://github.com/icidasset/shikensu


library
  default-language:
    Haskell2010

  hs-source-dirs:
    src

  exposed-modules:
    Shikensu

  build-depends:
    base == 4.*,
    containers >= 0.5 && < 1,
    filepath == 1.4.*,
    flow == 1.0.*,
    Glob == 0.7.*


test-suite tests
  default-language:
    Haskell2010

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Spec.hs

  build-depends:
    base,
    flow,
    directory >= 1.2 && < 2,
    shikensu
