name: shikensu
version: 0.1.0
category: File IO

synopsis:
  A small toolset for building static websites

description:
  Please see README.md

homepage:
  https://github.com/icidasset/shikensu#README

license: MIT
license-file: LICENSE

author: Steven Vandevelde
maintainer: icid.asset@gmail.com

build-type: Simple
cabal-version: >= 1.10


source-repository head
  type: git
  location: https://github.com/icidasset/shikensu


library
  default-language:
    Haskell2010

  hs-source-dirs:
    src

  exposed-modules:
    Shikensu,
    Shikensu.Types,
    Shikensu.Utilities,
    Shikensu.Contrib.IO,
    Shikensu.Contrib.Pure

  build-depends:
    base == 4.*,
    containers >= 0.5 && < 1,
    directory >= 1.2 && < 2,
    filepath == 1.4.*,
    flow == 1.0.*,
    Glob == 0.7.*,
    text >= 1.2 && < 2


test-suite tests
  default-language:
    Haskell2010

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    tests

  main-is:
    Test.hs

  other-modules:
    Test.Contrib,
    Test.Helpers,
    Test.Shikensu

  build-depends:
    base,
    directory,
    filepath,
    flow,
    shikensu,
    tasty == 0.11.*,
    tasty-hunit == 0.9.*
